--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "react-model",
+  "name": "vue-model",
   "version": "0.1.0",
   "author": "zengze",
+  "scripts": {
+    "dev": "webpack-dev-server --inline --hot --progress --colors"
+  },
   "dependencies": {
-    
+    "vue": "^2.5.13"
   },
   "devDependencies": {
-    "babel-core": "^6.20.0",
-    "babel-loader": "^6.2.9",
-    "babel-plugin-import": "^1.1.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-1": "^6.16.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
-    "css-loader": "^0.26.1",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "fs": "0.0.1-security",
-    "imports-loader": "^0.7.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.14.0"
+    "babel-core": "^6.26.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-loader": "^7.1.3",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "css-loader": "^0.28.10",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^2.24.0",
+    "imports-loader": "^0.8.0",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.6",
+    "style-loader": "^0.20.2",
+    "url-loader": "^1.0.1",
+    "vue-loader": "^9.9.5",
+    "vue-template-compiler": "^2.5.13",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.2"
   }
 }
