添加名片版本

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
   "plugins": [
-    
+    "transform-vue-jsx",
+    ["component",[
+      {
+        "libraryName": "element-ui",
+        "styleLibraryName": "theme-chalk"
+      }
+    ]]
   ],
   "presets": [
     "es2015",
