--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
     "dev": "webpack-dev-server --inline --hot --progress --colors"
   },
   "dependencies": {
-    "vue": "^2.5.13"
+    "axios": "^0.18.0",
+    "element-ui": "^2.3.4",
+    "es6-promise": "^4.2.4",
+    "qs": "^6.5.1",
+    "vue": "^2.5.13",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.3",
+    "babel-plugin-component": "^1.1.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-es2015": "^6.24.1",
